fix: update text spacings

--- a/src/scss/main/widgets/_advertisement.scss
+++ b/src/scss/main/widgets/_advertisement.scss
@@ -198,7 +198,7 @@
         .content {
 
             &.-description {
-                padding: 50px 50px 20px;
+                padding: 40px 50px 20px;
 
                 p {
                     font-size: rem-calc(16px);
@@ -206,7 +206,7 @@
                 }
 
                 &.-idx-2 {
-                    padding-top: 30px;
+                    padding-top: 20px;
                     text-align: center;
                     font-size: rem-calc(18px);
                 }
